--- a/index.html
+++ b/index.html
@@ -278,6 +278,10 @@ $(document).ready(function () {
 <li>
   <a href="about.html">About</a>
 </li>
+<li class="dropdown-header">Teaching</li>
+<li>
+  <a href="teaching.html"></a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
