--- a/about.html
+++ b/about.html
@@ -278,9 +278,8 @@ $(document).ready(function () {
 <li>
   <a href="about.html">About</a>
 </li>
-<li class="dropdown-header">Teaching</li>
 <li>
-  <a href="teaching.html"></a>
+  <a href="teaching.html">Teaching</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
