--- a/research.html
+++ b/research.html
@@ -318,13 +318,13 @@ $(document).ready(function () {
 <li><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3293272">Supply Chain Disruptions and Causal Outcomes: Evidence from the Bankruptcy of Hanjin Shipping (2018)</a>.</li>
 </ol>
 <ul>
-<li>Reject and Resubmit.</li>
+<li><em>Reject and Resubmit</em></li>
 </ul>
 <ol start="2" style="list-style-type: decimal">
 <li><a href="https://www.dropbox.com/s/8362vg2cn57sgld/Estimation-of-the-number-of-mixture-components.pdf?raw=1">Estimation of the Number of Components in Nonparametric Multivariate Finite Mixture Models (2019)</a>. [With Eric Mbakop]</li>
 </ol>
 <ul>
-<li>Revise and Resubmit, <strong>The Annals of Statistics</strong></li>
+<li><em>Revise and Resubmit</em>, <strong>The Annals of Statistics</strong></li>
 </ul>
 <ol start="3" style="list-style-type: decimal">
 <li>Supply Chain Spillovers in Corporate Social Responsibility Investments (2020) [With Jun Li and Andrew Wu]</li>
