--- a/tutorials.html
+++ b/tutorials.html
@@ -11,7 +11,7 @@
 
 
 
-<title>teaching.utf8</title>
+<title>tutorials.utf8</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -19,6 +19,9 @@
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
+<script src="site_libs/jqueryui-1.11.4/jquery-ui.min.js"></script>
+<link href="site_libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
+<script src="site_libs/tocify-1.9.1/jquery.tocify.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
@@ -251,6 +254,75 @@ $(document).ready(function () {
 
 
 
+<style type="text/css">
+
+#TOC {
+  margin: 25px 0px 20px 0px;
+}
+@media (max-width: 768px) {
+#TOC {
+  position: relative;
+  width: 100%;
+}
+}
+
+@media print {
+.toc-content {
+  /* see https://github.com/w3c/csswg-drafts/issues/4434 */
+  float: right;
+}
+}
+
+.toc-content {
+  padding-left: 30px;
+  padding-right: 40px;
+}
+
+div.main-container {
+  max-width: 1200px;
+}
+
+div.tocify {
+  width: 20%;
+  max-width: 260px;
+  max-height: 85%;
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  div.tocify {
+    width: 25%;
+  }
+}
+
+@media (max-width: 767px) {
+  div.tocify {
+    width: 100%;
+    max-width: none;
+  }
+}
+
+.tocify ul, .tocify li {
+  line-height: 20px;
+}
+
+.tocify-subheader .tocify-item {
+  font-size: 0.90em;
+}
+
+.tocify .list-group-item {
+  border-radius: 0px;
+}
+
+.tocify-subheader {
+  display: inline;
+}
+.tocify-subheader .tocify-item {
+  font-size: 0.95em;
+}
+
+</style>
+
+
 
 </head>
 
@@ -258,6 +330,16 @@ $(document).ready(function () {
 
 
 <div class="container-fluid main-container">
+
+
+<!-- setup 3col/9col grid for toc_float and main content  -->
+<div class="row-fluid">
+<div class="col-xs-12 col-sm-4 col-md-3">
+<div id="TOC" class="tocify">
+</div>
+</div>
+
+<div class="toc-content col-xs-12 col-sm-8 col-md-9">
 
 
 
@@ -314,28 +396,26 @@ $(document).ready(function () {
 
 
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
-<div id="harvard-university-harvard-business-school" class="section level3">
-<h3>Harvard University – Harvard Business School</h3>
-<ul>
-<li>Technology and Operations Management Required Curriculum [Fall ’19 and Fall ’20]</li>
-</ul>
+<div id="cleaning-data" class="section level1">
+<h1><span class="header-section-number">1</span> Cleaning Data</h1>
+<div id="reading-data" class="section level2">
+<h2><span class="header-section-number">1.1</span> Reading Data</h2>
 </div>
-<div id="northwestern-university-kellogg-school-of-management" class="section level3">
-<h3>Northwestern University – Kellogg School of Management</h3>
-<ul>
-<li>Undergraduate Courses: Principles of Finance, Foreign Exchange Markets, Derivatives I, Derivatives II</li>
-<li>MBA: Finance I, Finance II, Tax Strategy, Business Strategy</li>
-</ul>
+<div id="winsorizing" class="section level2">
+<h2><span class="header-section-number">1.2</span> Winsorizing</h2>
 </div>
-<div id="simon-fraser-university" class="section level3">
-<h3>Simon Fraser University</h3>
-<ul>
-<li>Intro Micro, Intro Macro, Intermediate Macro.</li>
-</ul>
+</div>
+<div id="regressions" class="section level1">
+<h1><span class="header-section-number">2</span> Regressions</h1>
+</div>
+<div id="outputting-results" class="section level1">
+<h1><span class="header-section-number">3</span> Outputting Results</h1>
 </div>
 
 
 
+</div>
+</div>
 
 </div>
 
@@ -368,6 +448,32 @@ $(document).ready(function () {
 
 <!-- code folding -->
 
+<script>
+$(document).ready(function ()  {
+
+    // move toc-ignore selectors from section div to header
+    $('div.section.toc-ignore')
+        .removeClass('toc-ignore')
+        .children('h1,h2,h3,h4,h5').addClass('toc-ignore');
+
+    // establish options
+    var options = {
+      selectors: "h1,h2,h3",
+      theme: "bootstrap3",
+      context: '.toc-content',
+      hashGenerator: function (text) {
+        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_').toLowerCase();
+      },
+      ignoreSelector: ".toc-ignore",
+      scrollTo: 0
+    };
+    options.showAndHide = false;
+    options.smoothScroll = false;
+
+    // tocify
+    var toc = $("#TOC").tocify(options).data("toc-tocify");
+});
+</script>
 
 <!-- dynamically load mathjax for compatibility with self-contained -->
 <script>
