--- a/tutorials.html
+++ b/tutorials.html
@@ -11,7 +11,7 @@
 
 
 
-<title>tutorials.utf8</title>
+<title></title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -396,6 +396,11 @@ div.tocify {
 
 
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
+<p>Here is some code for procedures commonly used in empirical analysis.</p>
+<pre class="r"><code>library(data.table)
+library(magrittr)
+DT &lt;- iris %&gt;%
+  head()</code></pre>
 <div id="cleaning-data" class="section level1">
 <h1><span class="header-section-number">1</span> Cleaning Data</h1>
 <div id="reading-data" class="section level2">
