--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Caleb Kwon</a>
+      <a class="navbar-brand" href="index.html"><img id="logo" style="width: 100px;" src="hbs.jpg" /></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -279,6 +279,9 @@ $(document).ready(function () {
 </li>
 <li>
   <a href="teaching.html">Teaching</a>
+</li>
+<li>
+  <a href="codes.html">Codes</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -313,10 +316,22 @@ $(document).ready(function () {
 </div>
 
 
-<p><link rel="stylesheet" href="styles.css" type="text/css"></p>
-<p><img src="images/caleb.png" style="width:30%;  margin-right: 20px" align="left"></p>
-<p>I am a first year PhD student in Operations Management at Harvard University (GSAS and Business School). My research interests are in supply chains and applied econometrics. Prior to Harvard, I was a research assistant at the Kellogg School of Management in Finance and Econometrics.</p>
+<!-- <script> -->
+<!--    $(document).ready(function() { -->
+<!--      $head = $('#header'); -->
+<!--      $head.prepend('<img src=\"hbs.jpg\" style=\"float: right;width: 150px;\"/>') -->
+<!--    }); -->
+<!-- </script> -->
+<div style="margin-bottom:25px;">
+
+</div>
+<p><img src="images/caleb.png" height = "270" style ="display:block; margin-left: auto; margin-right:auto;"></p>
+<hr />
+<div id="caleb-kwon" class="section level1">
+<h1>Caleb Kwon</h1>
+<p>I am a PhD student in Operations Management at Harvard University. My research interests are in supply chains and applied econometrics. Prior to Harvard, I was a research assistant at the Kellogg School of Management in Finance and Econometrics. And before that, I was an undergraduate student in Economics at Simon Fraser University.</p>
 <p>You can find my CV/Resume <a href="https://www.dropbox.com/s/efdu25rwgm3us4f/res4.pdf?raw=1">here</a>.</p>
+</div>
 
 
 
