--- a/research.html
+++ b/research.html
@@ -270,7 +270,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Caleb Kwon</a>
+      <a class="navbar-brand" href="index.html"><img id="logo" style="width: 100px;" src="hbs.jpg" /></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -279,6 +279,9 @@ $(document).ready(function () {
 </li>
 <li>
   <a href="teaching.html">Teaching</a>
+</li>
+<li>
+  <a href="codes.html">Codes</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
