--- a/codes.html
+++ b/codes.html
@@ -399,11 +399,67 @@ div.tocify {
 
 
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
-<p>I’m a huge fan of R. To share my enthusiasm, I’ve provided some code for procedures commonly used in empirical analysis in the social sciences. They probably aren’t the most efficient, but they get the job done and are reasonably quick and easy to read. Please email me if you spot any erorrs or have any questions or suggestions!</p>
+<p>I’m a huge fan of R. To share my enthusiasm, I’ve provided some code for procedures commonly used in empirical analysis in Operations Management and Economics. They probably aren’t the most efficient, but they get the job done and are reasonably quick and easy to read (even months later). Please email me if you spot any errors or have any questions or suggestions!</p>
+<hr />
 <div id="wrds" class="section level1">
 <h1><span class="header-section-number">1</span> WRDS</h1>
 <hr />
-<p>Because data from WRDS is one of the most common sources of data to use in analysis, I will first go over how to get data from WRDS in R.</p>
+<p>Because WRDS contains datasets that are very popular among OM scholars and economists, I begin with code that allows you to fetch data from WRDS in R directly, and not require you to log into WRDS each time and painstakingly choose the dataset and variables over and over again.</p>
+<p>You can find this tutorial on WRDS, but here is a summary and example codes.</p>
+<p>Setup (for OS X):</p>
+<ol style="list-style-type: decimal">
+<li>Install and load the package <code>RPostgres</code>.</li>
+<li>Using terminal create the file .pgpass by entering the following in terminal: <code>nano ~/.pgpass</code></li>
+<li>Input <code>wrds-pgdata.wharton.upenn.edu:9737:wrds:wrds_username:wrds_password</code> in the .pgpass using a text editor (e.g., Sublime Text 3).</li>
+<li>Secure this file by entering the following in terminal: <code>chmod 600 ~/.pgpass</code></li>
+</ol>
+<div id="connect-to-wrds-in-r" class="section level2">
+<h2><span class="header-section-number">1.1</span> Connect to WRDS in R</h2>
+<pre class="r"><code># Required Package
+library(RPostgres)
+
+# Connect to WRDS
+wrds &lt;- dbConnect(Postgres(),
+                  host=&#39;wrds-pgdata.wharton.upenn.edu&#39;,
+                  port=9737,
+                  dbname=&#39;wrds&#39;,
+                  sslmode=&#39;require&#39;,
+                  user=&#39;USERID&#39;) # Input USER ID here. </code></pre>
+</div>
+<div id="compustat-fundamentals-quarterly" class="section level2">
+<h2><span class="header-section-number">1.2</span> Compustat Fundamentals Quarterly</h2>
+<pre class="r"><code># Download data 
+compustat_fundQ_DT &lt;- dbSendQuery(wrds, 
+&quot;select CONM, TIC, EXCHG,GVKEY, DATADATE, INVTQ, ATQ, SALEQ, COGSQ  
+                    from COMP.FUNDQ                                  
+                    WHERE DATADATE &gt;= &#39;2018-03-01&#39; AND DATADATE &lt; &#39;2018-04-01&#39;&quot;)
+
+# Fetch all rows
+compustat_fundQ_DT &lt;- dbFetch(compustat_fundQ_DT, n=-1)</code></pre>
+</div>
+<div id="compustat-fundamentals-annual" class="section level2">
+<h2><span class="header-section-number">1.3</span> Compustat Fundamentals Annual</h2>
+<pre class="r"><code># Download data 
+compustat_fundA_DT &lt;- dbSendQuery(wrds, 
+&quot;select CONM, TIC, EXCHG,GVKEY, DATADATE, INVT, AT, SALE, COGS  
+                    from COMP.FUNDA                                  
+                    WHERE DATADATE &gt;= &#39;2018-01-01&#39; AND DATADATE &lt; &#39;2019-04-01&#39;&quot;)
+
+# Fetch all rows
+compustat_fundA_DT &lt;- dbFetch(compustat_fundA_DT, n=-1)</code></pre>
+</div>
+<div id="crsp" class="section level2">
+<h2><span class="header-section-number">1.4</span> CRSP</h2>
+<pre class="r"><code># Download data 
+CRSP_daily_DT &lt;- dbSendQuery(wrds, &quot;SELECT CUSIP,PERMNO,DATE,PRC,SHROUT,VOL
+                   FROM CRSP.DSF
+                   WHERE PERMNO IN (14593) 
+                   AND DATE BETWEEN &#39;2010-01-01&#39; and &#39;2018-04-01&#39;&quot;)
+
+# Fetch all rows
+CRSP_daily_DT &lt;- dbFetch(CRSP_daily_DT, n=-1)</code></pre>
+<hr />
+</div>
 </div>
 <div id="data-preliminaries" class="section level1">
 <h1><span class="header-section-number">2</span> Data Preliminaries</h1>
@@ -415,36 +471,61 @@ div.tocify {
 library(pacman)
 
 # Load every other package required using p_load
-pacman::p_load(data.table, magrittr, stargazer, fixest, lfe, 
-    readstata13, rmatio, openxlsx)</code></pre>
-<p>This way, I dont’ have to keep writing out library() over and over again.</p>
+pacman::p_load(data.table, magrittr, stargazer, fixest, lfe, readstata13, rmatio, openxlsx)</code></pre>
+<p>This way, I dont’ have to keep writing out <code>library(package_name)</code> over and over again.</p>
 </div>
 <div id="reading-data" class="section level2">
 <h2><span class="header-section-number">2.2</span> Reading Data</h2>
-<p>We typically encounter three types of data files: (1) .csv, (2) .dat and (3) .xlsx, and (4) .mat Below are the packages that I use for the four types.</p>
+<p>We typically encounter three types of data files:</p>
+<ol style="list-style-type: decimal">
+<li>.CSV</li>
+<li>.XLSX</li>
+<li>.DAT</li>
+<li>.MAT</li>
+</ol>
+<p>Below are the packages and codes that I use for the four types. Note that I pipe everything into setDT() to convert the data frames into a data table (except when using data table’s fread function which handles this automatically).</p>
 <pre class="r"><code># CSV
 CSV_DT &lt;- data.table::fread(&quot;/Users/ckwon/Dropbox/Academic Research/data.csv&quot;)
 
 # DAT
-dat_DT &lt;- readstata13::read.dta13(&quot;/Users/ckwon/Dropbox/Academic Research/data.dat&quot;)
+dat_DT &lt;- readstata13::read.dta13(&quot;/Users/ckwon/Dropbox/Academic Research/data.dat&quot;) %&gt;% setDT()
 
 # XLSX
-CSV_DT &lt;- readstat13::read.dta13(&quot;/Users/ckwon/Dropbox/Academic Research/data.dat&quot;)</code></pre>
-</div>
-<div id="wrds-data" class="section level2">
-<h2><span class="header-section-number">2.3</span> WRDS Data</h2>
+CSV_DT &lt;- openxlsx::read.xlsx(&quot;/Users/ckwon/Dropbox/Academic Research/data.dat&quot;) %&gt;% setDT() 
+
+# MAT 
+MAT_DT &lt;- read.mat(&quot;/Users/ckwon/Dropbox/Academic Research/data.dat&quot;) %&gt;% setDT() </code></pre>
 </div>
 <div id="winsorizing" class="section level2">
-<h2><span class="header-section-number">2.4</span> Winsorizing</h2>
+<h2><span class="header-section-number">2.3</span> Winsorizing</h2>
+<pre class="r"><code># Required package
+pacman::p_load(DescTools)
+
+# Choose variables to winsorize
+winz_var &lt;- c(&quot;at&quot;, &quot;grossmargin&quot;, &quot;debt_equity&quot;, &quot;roe&quot;)
+
+# Winsorize (2% and 98%)
+DT[,(winz_var) := lapply(.SD, Winsorize, minval = NULL, maxval = NULL,  probs = c(0.02, 0.98),  na.rm = TRUE), .SDcols = winz_var]</code></pre>
 </div>
 <div id="trimming" class="section level2">
-<h2><span class="header-section-number">2.5</span> Trimming</h2>
+<h2><span class="header-section-number">2.4</span> Trimming</h2>
+<pre class="r"><code># Separately 
+DT &lt;- DT %&gt;%
+  .[roe &gt; 0.01] %&gt;%    # Only choose samples where return on equity is greater than 0.01
+  .[!(at == 0)] %&gt;%    # Drop obs that have assets equal to 0
+  .[invt &lt; 500] %&gt;%    # Drop obs that have inventories smaller than 500
+  .[!is.na(cogs)]      # Drop obs that have missing cost of goods sold values
+
+# Altogether: I prefer the method above, as it is easier to read. 
+DT &lt;- DT %&gt;%
+  .[roe &gt; 0.01 &amp; !(at ==0) &amp; invt &lt; 500 &amp; !(is.na(cogs))]</code></pre>
 <hr />
 </div>
 </div>
 <div id="regressions" class="section level1">
 <h1><span class="header-section-number">3</span> Regressions</h1>
 <hr />
+<p>Now, onto the fun part! There are many packages that run regressions very efficiently in R. My two favorites are the packages <code>lfe</code> and <code>fixest</code>. I currently favor the former, as the latter is not compatible with <code>stargazer</code>. However, <code>fixest</code> is often faster and includes a very fast Poisson fixed effects procedure which <code>lfe</code> does not have.</p>
 <div id="ordinary-least-squares" class="section level2">
 <h2><span class="header-section-number">3.1</span> Ordinary Least Squares</h2>
 </div>
