--- a/codes.html
+++ b/codes.html
@@ -399,7 +399,8 @@ div.tocify {
 
 
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
-<p>I’m a huge fan of R. To share my enthusiasm, I’ve provided some code for procedures commonly used in empirical analysis in Operations Management and Economics. They probably aren’t the most efficient, but they get the job done and are reasonably quick and easy to read (even months later). Please email me if you spot any errors or have any questions or suggestions!</p>
+<p>I’m a huge fan of R. To share my enthusiasm, I’ve provided some code for procedures commonly used in empirical analysis in Operations Management and Economics. The code is mostly self-contained, but requires a basic understanding of <code>data.table</code> and piping <code>%&gt;%</code>.</p>
+<p>The code should be fast (due to <code>data.table</code> and other user contributed packages and not me). But the primary focus was on readability, there are probably much faster alternatives to the codes I present below. Please email me if you spot any errors or have any questions or suggestions! I also take requests, so please email me if you think that there are commonly used routines that I’ve missed.</p>
 <hr />
 <div id="wrds" class="section level1">
 <h1><span class="header-section-number">1</span> WRDS</h1>
@@ -509,14 +510,26 @@ DT[,(winz_var) := lapply(.SD, Winsorize, minval = NULL, maxval = NULL,  probs = 
 </div>
 <div id="trimming" class="section level2">
 <h2><span class="header-section-number">2.4</span> Trimming</h2>
-<pre class="r"><code># Separately 
+<p>People use ‘trimming’ to mean two different things: (1) Removing observations that fall above or below a certain quantile, or (2) removing observations that don’t fit a certain criterion, e.g., return on equity is smaller than 0.01. I present code for both meanings below.</p>
+<pre class="r"><code># Definition 1: Delete obs. where return on equity falls outside the (2%, 98%) percentiles
+quantile_roe_98 &lt;- quantile(DT$roe, probs = 0.98)
+quantile_roe_02 &lt;- quantile(DT$roe, probs = 0.02)
+
+DT &lt;- DT %&gt;%
+  .[!(roe &gt; quantile_roe_98)] %&gt;%  # Delete observations that fall 
+  
+  .[!(roe &lt; quantile_roe_02)]
+
+
+
+# Definition 2: Separately 
 DT &lt;- DT %&gt;%
   .[roe &gt; 0.01] %&gt;%    # Only choose samples where return on equity is greater than 0.01
   .[!(at == 0)] %&gt;%    # Drop obs that have assets equal to 0
   .[invt &lt; 500] %&gt;%    # Drop obs that have inventories smaller than 500
   .[!is.na(cogs)]      # Drop obs that have missing cost of goods sold values
 
-# Altogether: I prefer the method above, as it is easier to read. 
+# Definition 2: Altogether: I prefer the method above, as it is easier to read. 
 DT &lt;- DT %&gt;%
   .[roe &gt; 0.01 &amp; !(at ==0) &amp; invt &lt; 500 &amp; !(is.na(cogs))]</code></pre>
 <hr />
@@ -525,9 +538,15 @@ DT &lt;- DT %&gt;%
 <div id="regressions" class="section level1">
 <h1><span class="header-section-number">3</span> Regressions</h1>
 <hr />
-<p>Now, onto the fun part! There are many packages that run regressions very efficiently in R. My two favorites are the packages <code>lfe</code> and <code>fixest</code>. I currently favor the former, as the latter is not compatible with <code>stargazer</code>. However, <code>fixest</code> is often faster and includes a very fast Poisson fixed effects procedure which <code>lfe</code> does not have.</p>
+<p>Now, onto the fun part!There are many packages that run regressions very efficiently in R. My two favorites are the packages <code>lfe</code> and <code>fixest</code>. I currently favor the former, as the latter is not compatible with <code>stargazer</code>. However, <code>fixest</code> is often faster and includes a very fast Poisson fixed effects procedure which <code>lfe</code> does not have.</p>
 <div id="ordinary-least-squares" class="section level2">
 <h2><span class="header-section-number">3.1</span> Ordinary Least Squares</h2>
+<pre class="r"><code># Initialize dataset (should already be in R)
+DT &lt;- iris %&gt;% setDT()
+
+# Run regression
+reg_Sepal.Length_Sepal.Width &lt;- felm(Sepal.Length ~ Sepal.Width, data = DT)</code></pre>
+<p>Consistent naming conventions are important when you run many regressions and need to later export them into <span class="math inline">\(LaTeX\)</span>. I follow the convention of starting with reg and then appending in the name of the dependent variable and the most independent variable of interest, e.g. <code>reg_DEPVAR_INDEPVAR</code>.</p>
 </div>
 <div id="poisson" class="section level2">
 <h2><span class="header-section-number">3.2</span> Poisson</h2>
