--- a/index.html
+++ b/index.html
@@ -322,6 +322,15 @@ $(document).ready(function () {
 <!--      $head.prepend('<img src=\"hbs.jpg\" style=\"float: right;width: 150px;\"/>') -->
 <!--    }); -->
 <!-- </script> -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-165847699-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-165847699-1');
+</script>
 <div style="margin-bottom:25px;">
 
 </div>
