--- a/research.html
+++ b/research.html
@@ -316,6 +316,15 @@ $(document).ready(function () {
 </div>
 
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-165847699-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-165847699-1');
+</script>
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
 <ol style="list-style-type: decimal">
 <li><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3293272">Supply Chain Disruptions and Causal Outcomes: Evidence from the Bankruptcy of Hanjin Shipping (2018)</a>.</li>
