--- a/teaching.html
+++ b/teaching.html
@@ -316,6 +316,15 @@ $(document).ready(function () {
 </div>
 
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-165847699-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-165847699-1');
+</script>
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
 <div id="harvard-university-harvard-business-school" class="section level3">
 <h3>Harvard University – Harvard Business School</h3>
