--- a/codes.html
+++ b/codes.html
@@ -409,7 +409,7 @@ div.tocify {
 </script>
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
 <p>Here is some code for procedures commonly used in empirical analysis in Operations Management and Economics. The code is mostly self-contained, but requires a basic understanding of <code>data.table</code> and piping <code>%&gt;%</code>.</p>
-<p>The code should be fast (due to <code>data.table</code> and other user contributed packages and not me). But because my primary focus was (and is) to write code that I can easily read months later, there are probably much better alternatives.</p>
+<p>The code should be sufficiently fast (due to <code>data.table</code> and other user contributed packages and not because of me). But because my primary focus was (and is) to write code that I can easily read months later, the code is probably not the fastest or most optimized.</p>
 <p>Please email me if you spot any errors or have any questions or suggestions! I also take requests, so please email me if you think that there are commonly used routines that I’ve missed.</p>
 <hr />
 <div id="wrds" class="section level1">
