--- a/index.html
+++ b/index.html
@@ -338,8 +338,14 @@ $(document).ready(function () {
 <hr />
 <div id="caleb-kwon" class="section level1">
 <h1>Caleb Kwon</h1>
-<p>I am a PhD student in Operations Management at Harvard University. My research interests are in supply chains and applied econometrics. Prior to Harvard, I was a research assistant at the Kellogg School of Management in Finance and Econometrics. And before that, I was an undergraduate student in Economics at Simon Fraser University.</p>
+<p>I am a rising second year PhD student in Operations Management at Harvard University. My research interests are in supply chains and applied econometrics. Prior to Harvard, I was a research assistant at the Kellogg School of Management in Finance and Econometrics. And before that, I was an undergraduate student in Economics at Simon Fraser University.</p>
 <p>You can find my CV/Resume <a href="https://www.dropbox.com/s/efdu25rwgm3us4f/res4.pdf?raw=1">here</a>.</p>
+<div id="new" class="section level2">
+<h2>New:</h2>
+<ul>
+<li>A new version of <em>Estimation of the Number of Components in Nonparametric Multivariate Finite Mixture Models</em> has been uploaded in the Research Tab. Please also see the accompanying guide on how to easily implement our procedure.</li>
+</ul>
+</div>
 </div>
 
 
