--- a/research.html
+++ b/research.html
@@ -333,10 +333,11 @@ $(document).ready(function () {
 <li><em>Reject and Resubmit</em></li>
 </ul>
 <ol start="2" style="list-style-type: decimal">
-<li><a href="https://www.dropbox.com/s/8362vg2cn57sgld/Estimation-of-the-number-of-mixture-components.pdf?raw=1">Estimation of the Number of Components in Nonparametric Multivariate Finite Mixture Models (2019)</a>. [With Eric Mbakop]</li>
+<li><a href="https://www.dropbox.com/s/cxkmkbzp9b1azke/paper_draft_jun_2020.pdf?dl=0">Estimation of the Number of Components in Nonparametric Multivariate Finite Mixture Models (2020)</a>. [With Eric Mbakop]</li>
 </ol>
 <ul>
-<li><em>Revise and Resubmit</em>, <strong>The Annals of Statistics</strong></li>
+<li><em>Revised and Resubmitted</em>, <strong>The Annals of Statistics</strong></li>
+<li><a href="https://www.dropbox.com/s/362zmzjb0uybr57/Online_Algorithm.pdf?dl=0">Link to Practicioner’s Guide</a>:</li>
 </ul>
 <ol start="3" style="list-style-type: decimal">
 <li>Supply Chain Spillovers in Corporate Social Responsibility Investments (2020) [With Jun Li and Andrew Wu]</li>
