--- a/research.html
+++ b/research.html
@@ -337,7 +337,7 @@ $(document).ready(function () {
 </ol>
 <ul>
 <li><em>Revised and Resubmitted</em>, <strong>The Annals of Statistics</strong></li>
-<li><a href="https://www.dropbox.com/s/362zmzjb0uybr57/Online_Algorithm.pdf?dl=0">Link to Practicioner’s Guide</a>:</li>
+<li><a href="https://www.dropbox.com/s/362zmzjb0uybr57/Online_Algorithm.pdf?dl=0">Link to Practicioner’s Guide</a></li>
 </ul>
 <ol start="3" style="list-style-type: decimal">
 <li>Supply Chain Spillovers in Corporate Social Responsibility Investments (2020) [With Jun Li and Andrew Wu]</li>
