--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ $(document).ready(function () {
 <div id="new" class="section level2">
 <h2>New:</h2>
 <ul>
-<li>A new version of <em>Estimation of the Number of Components in Nonparametric Multivariate Finite Mixture Models</em> has been uploaded in the Research Tab. Please also see the accompanying guide on how to easily implement our procedure.</li>
+<li>A new version of <em>Estimation of the Number of Components in Nonparametric Multivariate Finite Mixture Models</em> has been uploaded in the Research Tab.</li>
 </ul>
 </div>
 </div>
