--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@ $(document).ready(function () {
 <hr />
 <div id="caleb-kwon" class="section level1">
 <h1>Caleb Kwon</h1>
-<p>I am a rising second year PhD student in Operations Management at Harvard University. My research interests are in supply chains and applied econometrics. Prior to Harvard, I was a research assistant at the Kellogg School of Management in Finance and Econometrics. And before that, I was an undergraduate student in Economics at Simon Fraser University.</p>
+<p>I am a second year PhD student in Operations Management at Harvard University. My research interests are in supply chains and applied econometrics. Prior to Harvard, I was a research assistant at the Kellogg School of Management in Finance and Econometrics. And before that, I was an undergraduate student in Economics at Simon Fraser University.</p>
 <p>You can find my CV/Resume <a href="https://www.dropbox.com/s/efdu25rwgm3us4f/res4.pdf?raw=1">here</a>.</p>
 <div id="new" class="section level2">
 <h2>New:</h2>
