--- a/index.html
+++ b/index.html
@@ -280,9 +280,6 @@ $(document).ready(function () {
 <li>
   <a href="teaching.html">Teaching</a>
 </li>
-<li>
-  <a href="codes.html">Codes</a>
-</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
@@ -338,13 +335,10 @@ $(document).ready(function () {
 <hr />
 <div id="caleb-kwon" class="section level1">
 <h1>Caleb Kwon</h1>
-<p>I am a rising second year PhD student in Operations Management at Harvard University. My research interests are in supply chains and applied econometrics. Prior to Harvard, I was a research assistant at the Kellogg School of Management in Finance and Econometrics. And before that, I was an undergraduate student in Economics at Simon Fraser University.</p>
+<p>I am a second year PhD student in Operations Management at Harvard University. My research interests are in supply chains and applied econometrics.</p>
+<div id="resume" class="section level2">
+<h2>Resume</h2>
 <p>You can find my CV/Resume <a href="https://www.dropbox.com/s/efdu25rwgm3us4f/res4.pdf?raw=1">here</a>.</p>
-<div id="new" class="section level2">
-<h2>New:</h2>
-<ul>
-<li>A new version of <em>Estimation of the Number of Components in Nonparametric Multivariate Finite Mixture Models</em> has been uploaded in the Research Tab.</li>
-</ul>
 </div>
 </div>
 
