--- a/index.html
+++ b/index.html
@@ -295,6 +295,12 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
+  <a href="https://www.youtube.com/channel/UC3wCAOdCHnibrhHBlks8XFw">
+    <span class="fa fa-youtube-play fa-lg"></span>
+     
+  </a>
+</li>
+<li>
   <a href="https://www.linkedin.com/in/caleb-kwon-35b46110b/">
     <span class="fa fa-linkedin fa-lg"></span>
      
@@ -363,10 +369,22 @@ $(document).ready(function () {
 <hr />
 <div id="caleb-kwon" class="section level1">
 <h1>Caleb Kwon</h1>
-<p>I am a second year PhD student in Operations Management at Harvard University. My research interests are in supply chains and applied econometrics.</p>
+<p>I am a second year PhD student in Operations Management at Harvard University. My research interests are in supply chains and applied econometrics. I’m also an R enthusiast!</p>
 <div id="resume" class="section level2">
 <h2>Resume</h2>
 <p>You can find my CV/Resume <a href="https://www.dropbox.com/s/efdu25rwgm3us4f/res4.pdf?raw=1">here</a>.</p>
+</div>
+<div id="r-videos" class="section level2">
+<h2>R Videos</h2>
+<p>My latest video goes over how to estimate linear models in R using the <code>fixest</code> package. This is my preferred package for estimating linear (and non-linear) models in R because:</p>
+<ol style="list-style-type: decimal">
+<li>Its super fast – even when you have a ton of fixed effects. Benchmarks show that it is as fast as <code>felm</code> and <code>reghdfe</code> in Stata.</li>
+<li>It estimates various standard errors (robust, clustered) internally (no need for <code>clusterSEs</code> and <code>sandwich</code>).</li>
+<li>It exports your results into a beautiful and highly customizable LaTeX tables.</li>
+</ol>
+<p>It does all of the above with only two functions <code>fixest::feols</code> and <code>fixest::etable</code>.</p>
+<iframe width="420" height="315" src="https://www.youtube.com/embed/6r8FzYmfsjk">
+</iframe>
 </div>
 </div>
 
