--- a/research.html
+++ b/research.html
@@ -295,6 +295,12 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
+  <a href="https://www.youtube.com/channel/UC3wCAOdCHnibrhHBlks8XFw">
+    <span class="fa fa-youtube-play fa-lg"></span>
+     
+  </a>
+</li>
+<li>
   <a href="https://www.linkedin.com/in/caleb-kwon-35b46110b/">
     <span class="fa fa-linkedin fa-lg"></span>
      
