google scholar add

--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@ $(document).ready(function () {
 <p>I am a second year PhD student in Operations Management at Harvard University. My research interests are in supply chains and applied econometrics. I’m also an R enthusiast!</p>
 <div id="resume" class="section level2">
 <h2>Resume</h2>
-<p>You can find my CV/Resume <a href="https://www.dropbox.com/s/efdu25rwgm3us4f/res4.pdf?raw=1">here</a>.</p>
+<p>You can find my CV/Resume <a href="https://www.dropbox.com/s/efdu25rwgm3us4f/res4.pdf?raw=1">here</a> and my Google Scholar <a href="https://scholar.google.com/citations?user=mBw3GmIAAAAJ">here</a>.</p>
 </div>
 <div id="r-videos" class="section level2">
 <h2>R Videos</h2>
