--- a/research.html
+++ b/research.html
@@ -352,7 +352,7 @@ $(document).ready(function () {
 <li><a href="https://www.dropbox.com/s/cxkmkbzp9b1azke/paper_draft_jun_2020.pdf?dl=0">Estimation of the Number of Components in Nonparametric Multivariate Finite Mixture Models (2020)</a>. [With Eric Mbakop]</li>
 </ol>
 <ul>
-<li><em>Accepted at</em> <strong>The Annals of Statistics</strong></li>
+<li><em>Revised and Resubmitted</em>, <strong>The Annals of Statistics</strong></li>
 </ul>
 <ol start="3" style="list-style-type: decimal">
 <li>Supply Chain Spillovers in Corporate Social Responsibility Investments (2020) [With Jun Li and Andrew Wu]</li>
