--- a/research.html
+++ b/research.html
@@ -11,9 +11,8 @@
 
 
 
-<title> </title>
+<title></title>
 
-<script src="site_libs/header-attrs-2.4.6/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/paper.min.css" rel="stylesheet" />
@@ -23,8 +22,6 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
-<link href="site_libs/anchor-sections-1.0/anchor-sections.css" rel="stylesheet" />
-<script src="site_libs/anchor-sections-1.0/anchor-sections.js"></script>
 <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
 <link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
 
@@ -318,6 +315,12 @@ $(document).ready(function () {
      
   </a>
 </li>
+<li>
+  <a href="https://twitter.com/kwon_caleb">
+    <span class="fa fa-twitter fa-lg"></span>
+     
+  </a>
+</li>
       </ul>
     </div><!--/.nav-collapse -->
   </div><!--/.container -->
@@ -327,7 +330,6 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore"> </h1>
 
 </div>
 
@@ -343,19 +345,12 @@ $(document).ready(function () {
 </script>
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
 <ol style="list-style-type: decimal">
-<li><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3293272">Supply Chain Disruptions and Causal Outcomes: Evidence from the Bankruptcy of Hanjin Shipping (2018)</a>.</li>
-</ol>
-<ul>
-<li><em>Reject and Resubmit</em></li>
-</ul>
-<ol start="2" style="list-style-type: decimal">
-<li><a href="https://www.dropbox.com/s/cxkmkbzp9b1azke/paper_draft_jun_2020.pdf?dl=0">Estimation of the Number of Components in Nonparametric Multivariate Finite Mixture Models (2020)</a>. [With Eric Mbakop]</li>
-</ol>
-<ul>
-<li><em>Revised and Resubmitted</em>, <strong>The Annals of Statistics</strong></li>
-</ul>
-<ol start="3" style="list-style-type: decimal">
-<li>Supply Chain Spillovers in Corporate Social Responsibility Investments (2020) [With Jun Li and Andrew Wu]</li>
+<li><p><a href="https://www.dropbox.com/s/cxkmkbzp9b1azke/paper_draft_jun_2020.pdf?dl=0">Estimation of the Number of Components in Nonparametric Multivariate Finite Mixture Models (2020)</a>. [With Eric Mbakop]</p>
+<p><strong>Annals of Statistics</strong> (Accepted)</p></li>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3293272">Supply Chain Disruptions and Causal Outcomes: Evidence from the Bankruptcy of Hanjin Shipping (2018)</a>.</p>
+<p><em>Reject and Resubmit</em></p></li>
+<li><p>Supply Chain Spillovers in Corporate Social Responsibility Investments (2020) [With Jun Li and Andrew Wu]</p>
+<p><em>Draft coming soon</em></p></li>
 </ol>
 
 
