--- a/teaching.html
+++ b/teaching.html
@@ -11,9 +11,8 @@
 
 
 
-<title> </title>
+<title>teaching.utf8</title>
 
-<script src="site_libs/header-attrs-2.4.6/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/paper.min.css" rel="stylesheet" />
@@ -23,8 +22,6 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
-<link href="site_libs/anchor-sections-1.0/anchor-sections.css" rel="stylesheet" />
-<script src="site_libs/anchor-sections-1.0/anchor-sections.js"></script>
 <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
 <link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
 
@@ -318,6 +315,12 @@ $(document).ready(function () {
      
   </a>
 </li>
+<li>
+  <a href="https://twitter.com/kwon_caleb">
+    <span class="fa fa-twitter fa-lg"></span>
+     
+  </a>
+</li>
       </ul>
     </div><!--/.nav-collapse -->
   </div><!--/.container -->
@@ -327,7 +330,6 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore"> </h1>
 
 </div>
 
@@ -345,7 +347,11 @@ $(document).ready(function () {
 <div id="harvard-university-harvard-business-school" class="section level3">
 <h3>Harvard University – Harvard Business School</h3>
 <ul>
-<li>Technology and Operations Management Required Curriculum [Fall ’19 and Fall ’20]</li>
+<li>Technology and Operations Management – Required Curriculum Fall ’19</li>
+<li>Technology and Operations Management – Required Curriculum Fall ’20
+<ul>
+<li>Please click here for teaching evaluations.</li>
+</ul></li>
 </ul>
 </div>
 <div id="northwestern-university-kellogg-school-of-management" class="section level3">
