--- a/tf_review.html
+++ b/tf_review.html
@@ -11,7 +11,7 @@
 
 
 
-<title>index.utf8</title>
+<title></title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -22,6 +22,8 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
+<link href="site_libs/anchor-sections-1.0/anchor-sections.css" rel="stylesheet" />
+<script src="site_libs/anchor-sections-1.0/anchor-sections.js"></script>
 <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
 <link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
 
@@ -334,65 +336,8 @@ $(document).ready(function () {
 </div>
 
 
-<!-- <script> -->
-<!--    $(document).ready(function() { -->
-<!--      $head = $('#header'); -->
-<!--      $head.prepend('<img src=\"hbs.jpg\" style=\"float: right;width: 150px;\"/>') -->
-<!--    }); -->
-<!-- </script> -->
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-165847699-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-165847699-1');
-</script>
-<div style="margin-bottom:25px;">
-
-</div>
-<p><img src="images/caleb_1.jpg" height = "350" style ="display:block; margin-left: auto; margin-right:auto;"></p>
-<style type="text/css">
-    /* default styles here for older browsers. 
-       I tend to go for a 600px - 960px width max but using percentages
-    */
-    @media only screen and (min-width: 960px) {
-        /* styles for browsers larger than 960px; */
-    }
-    @media only screen and (min-width: 1440px) {
-        /* styles for browsers larger than 1440px; */
-    }
-    @media only screen and (min-width: 2000px) {
-        /* for sumo sized (mac) screens */
-    }
-    @media only screen and (max-device-width: 480px) {
-       /* styles for mobile browsers smaller than 480px; (iPhone) */
-    }
-    @media only screen and (device-width: 768px) {
-       /* default iPad screens */
-    }
-    /* different techniques for iPad screening */
-    @media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait) {
-      /* For portrait layouts only */
-    }
-
-    @media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:landscape) {
-      /* For landscape layouts only */
-    }
-</style>
-<hr />
-<div id="caleb-kwon" class="section level1">
-<h1>Caleb Kwon</h1>
-<p>I am a second year PhD student in Operations Management at Harvard University. My research interests are in Supply chains, and Econometrics, and my advisor is Professor Ananth Raman.</p>
-<p>You can find my CV/Resume <a href="https://www.dropbox.com/s/efdu25rwgm3us4f/res4.pdf?raw=1">here</a>, and my Google Scholar <a href="https://scholar.google.com/citations?user=mBw3GmIAAAAJ">here</a>.</p>
-<div id="recent-updates" class="section level2">
-<h2>Recent Updates</h2>
-<ul>
-<li>Teaching evaluations for HBS Course: Technology and Operations Management (requred for all MBAs)</li>
-<li>Estimation of the Number of Components in Nonparametric Multivariate Finite Mixture Models (2020) accepted at the <strong>Annals of Statistics</strong>.</li>
-</ul>
-</div>
+<div id="hello" class="section level1">
+<h1>Hello</h1>
 </div>
 
 
