--- a/research.html
+++ b/research.html
@@ -351,6 +351,7 @@ $(document).ready(function () {
 <p><em>Reject and Resubmit</em></p></li>
 <li><p>Supply Chain Spillovers in Corporate Social Responsibility Investments (2020) [With Jun Li and Andrew Wu]</p>
 <p><em>Draft coming soon</em></p></li>
+<li><p>On the Dynamics of Retail Labor Productivity (2020) [With Ananth Raman]</p></li>
 </ol>
 
 
