--- a/teaching.html
+++ b/teaching.html
@@ -350,7 +350,7 @@ $(document).ready(function () {
 <li>Technology and Operations Management – Required Curriculum Fall ’19</li>
 <li>Technology and Operations Management – Required Curriculum Fall ’20
 <ul>
-<li>Please click here for teaching evaluations.</li>
+<li><a href="https://calebkwon.com/rctom_reviews">Please click here for teaching evaluations</a></li>
 </ul></li>
 </ul>
 </div>
