--- a/index.html
+++ b/index.html
@@ -389,8 +389,8 @@ $(document).ready(function () {
 <div id="recent-updates" class="section level2">
 <h2>Recent Updates</h2>
 <ul>
-<li>Teaching evaluations for HBS Course: Technology and Operations Management (requred for all MBAs)</li>
-<li>Estimation of the Number of Components in Nonparametric Multivariate Finite Mixture Models (2020) accepted at the <strong>Annals of Statistics</strong>.</li>
+<li><a href="https://calebkwon.com/rctom_reviews">Teaching evaluations for HBS Course: Technology and Operations Management (requred for all MBAs at HBS).</a></li>
+<li><a href="https://www.dropbox.com/s/cxkmkbzp9b1azke/paper_draft_jun_2020.pdf?dl=0">Estimation of the Number of Components in Nonparametric Multivariate Finite Mixture Models (2020)</a> accepted at the <strong>Annals of Statistics</strong>.</li>
 </ul>
 </div>
 </div>
