--- a/codes.html
+++ b/codes.html
@@ -373,6 +373,9 @@ div.tocify {
 <li>
   <a href="teaching.html">Teaching</a>
 </li>
+<li>
+  <a href="coding_tutorials.html">Coding Tutorials</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
