--- a/coding_tutorials.html
+++ b/coding_tutorials.html
@@ -19,9 +19,6 @@
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
-<script src="site_libs/jqueryui-1.11.4/jquery-ui.min.js"></script>
-<link href="site_libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
-<script src="site_libs/tocify-1.9.1/jquery.tocify.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
@@ -265,75 +262,6 @@ $(document).ready(function () {
 
 
 
-<style type="text/css">
-
-#TOC {
-  margin: 25px 0px 20px 0px;
-}
-@media (max-width: 768px) {
-#TOC {
-  position: relative;
-  width: 100%;
-}
-}
-
-@media print {
-.toc-content {
-  /* see https://github.com/w3c/csswg-drafts/issues/4434 */
-  float: right;
-}
-}
-
-.toc-content {
-  padding-left: 30px;
-  padding-right: 40px;
-}
-
-div.main-container {
-  max-width: 1200px;
-}
-
-div.tocify {
-  width: 20%;
-  max-width: 260px;
-  max-height: 85%;
-}
-
-@media (min-width: 768px) and (max-width: 991px) {
-  div.tocify {
-    width: 25%;
-  }
-}
-
-@media (max-width: 767px) {
-  div.tocify {
-    width: 100%;
-    max-width: none;
-  }
-}
-
-.tocify ul, .tocify li {
-  line-height: 20px;
-}
-
-.tocify-subheader .tocify-item {
-  font-size: 0.90em;
-}
-
-.tocify .list-group-item {
-  border-radius: 0px;
-}
-
-.tocify-subheader {
-  display: inline;
-}
-.tocify-subheader .tocify-item {
-  font-size: 0.95em;
-}
-
-</style>
-
-
 
 </head>
 
@@ -341,16 +269,6 @@ div.tocify {
 
 
 <div class="container-fluid main-container">
-
-
-<!-- setup 3col/9col grid for toc_float and main content  -->
-<div class="row-fluid">
-<div class="col-xs-12 col-sm-4 col-md-3">
-<div id="TOC" class="tocify">
-</div>
-</div>
-
-<div class="toc-content col-xs-12 col-sm-8 col-md-9">
 
 
 
@@ -421,6 +339,13 @@ div.tocify {
 </div>
 
 
+<style type="text/css">
+.main-container {
+  max-width: 1800px;
+  margin-left: auto;
+  margin-right: auto;
+}
+</style>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-165847699-1"></script>
 <script>
@@ -431,14 +356,117 @@ div.tocify {
   gtag('config', 'UA-165847699-1');
 </script>
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
-<p>Here is some code for procedures commonly used in empirical analysis in Operations Management and Economics. The code is mostly self-contained, but requires a basic understanding of <code>data.table</code> and piping <code>%&gt;%</code>.</p>
-<p>The code should be sufficiently fast (due to <code>data.table</code> and other user contributed packages and not because of me). But because my primary focus was (and is) to write code that I can easily read months later, the code is probably not the fastest or most optimized.</p>
-<p>Please email me if you spot any errors or have any questions or suggestions! I also take requests, so please email me if you think that there are commonly used routines that I’ve missed.</p>
-
-
-
+<style type="text/css">
+  body{
+  font-size: 10pt;
+}
+</style>
+<style>
+html{
+    width:100%;
+    height:100%;
+}
+body{
+    width:100%;
+    height:100%;
+}
+</style>
+<div class="columns">
+<div class="column" style="width:48%;">
+<h1 id="basics">Basics</h1>
+<ul>
+<li><a href="https://www.youtube.com/watch?v=AhTA-jwPJjo">Installing and Loading Packages</a> [3:17]
+<ul>
+<li>Perfect video if you hate writing out <code>library()</code> a million times and worrying if the package you want to load is already installed.</li>
+</ul></li>
+<li><a href="https://www.youtube.com/watch?v=c91yQG0L1q0">Importing .CSV, .XLSX, .DTA, and .MAT datasets</a> [5:35]
+<ul>
+<li>Need to import simulation results from Matlab? Or have a coauthor who only works with Stata?</li>
+</ul></li>
+</ul>
+</div><div class="column" style="width:1%;">
+<p>  <!-- an empty Div (with a white space), serving as
+a column separator --></p>
+</div><div class="column" style="width:48%;">
+<h1 id="data-cleaningwrangling">Data Cleaning/Wrangling</h1>
+<ul>
+<li><a href="https://www.youtube.com/watch?v=A9j_gdkdmwY">Winsorizing and Trimming</a> [6:26]</li>
+<li><a href="https://www.youtube.com/watch?v=b919dCEyeuw">Changing Variable/Column Names</a> [1:07]</li>
+<li><a href="https://www.youtube.com/watch?v=1TZQvYGnTkY">Deleting Variables/Columns</a> [2:25]</li>
+<li><a href="https://www.youtube.com/watch?v=3isChjlemC4">Counting NA Rows/Observations</a> [0:59]</li>
+<li><a href="https://www.youtube.com/watch?v=PRw79bzhnZM">Deleting NA Rows/Observations</a> [2:14]</li>
+<li><a href="https://www.youtube.com/watch?v=9EDsJhvqsQk">Replacing NA Rows/Observations</a> [1:49]</li>
+</ul>
 </div>
 </div>
+<!-- Second set of columns begins here  -->
+<div class="columns">
+<div class="column" style="width:48%;">
+<h1 id="data-exploration">Data Exploration</h1>
+<ul>
+<li>Correlation Plots</li>
+</ul>
+</div><div class="column" style="width:1%;">
+<p>  <!-- an empty Div (with a white space), serving as
+a column separator --></p>
+</div><div class="column" style="width:48%;">
+<h1 id="regression-analysis">Regression Analysis</h1>
+<ul>
+<li><a href="https://www.youtube.com/watch?v=wTMKTpXKgOE">Robust and Clustered Standard Errors</a> [4:42]
+<ul>
+<li>Goes over HC0 ~ HC3, One-way and Two-way Clustered Standard Errors.</li>
+</ul></li>
+</ul>
+</div>
+</div>
+<!-- Second set of columns begins here  -->
+<div class="columns">
+<div class="column" style="width:48%;">
+<h1 id="calebs-recommended-packages">Caleb’s Recommended Packages</h1>
+<ul>
+<li><a href="https://www.youtube.com/watch?v=6r8FzYmfsjk">fixest</a> [7:57]
+<ul>
+<li>A must have for empirical researchers (Estimates linear/non-linear models, a bunch of standard errors, and makes exporting results into <span class="math inline">\(LaTeX\)</span> an absolute breeze).</li>
+</ul></li>
+<li>[sandwich]
+<ul>
+<li>Computes all sorts of standard errors (HC0 ~ HC5)</li>
+</ul></li>
+<li>[irlba]
+<ul>
+<li>Computes singular values of large matrices super-super fast.</li>
+</ul></li>
+</ul>
+</div><div class="column" style="width:1%;">
+<p>  <!-- an empty Div (with a white space), serving as
+a column separator --></p>
+</div><div class="column" style="width:48%;">
+<h1 id="machine-learning">Machine Learning</h1>
+</div>
+</div>
+<!-- Third set of columns begins here  -->
+<div class="columns">
+<div class="column" style="width:48%;">
+<h1 id="data-visualization">Data Visualization</h1>
+<ul>
+<li>Histogram</li>
+<li>Scatterplot</li>
+<li>Markov Chain Traceplot</li>
+</ul>
+</div><div class="column" style="width:1%;">
+<p>  <!-- an empty Div (with a white space), serving as
+a column separator --></p>
+</div><div class="column" style="width:48%;">
+<h1 id="monte-carlos-and-simulations">Monte Carlos and Simulations</h1>
+<ul>
+<li><a href="https://www.youtube.com/watch?v=JXbB00gUbH8">Example 1: Ordinary Least Squares Estimator</a> [8:30]</li>
+<li><a href="https://www.youtube.com/watch?v=xxqi6BOo8jo">Using the MonteCarlo Package for Simulations</a> [6:45]</li>
+</ul>
+</div>
+</div>
+
+
+
 
 </div>
 
@@ -471,32 +499,6 @@ $(document).ready(function () {
 
 <!-- code folding -->
 
-<script>
-$(document).ready(function ()  {
-
-    // move toc-ignore selectors from section div to header
-    $('div.section.toc-ignore')
-        .removeClass('toc-ignore')
-        .children('h1,h2,h3,h4,h5').addClass('toc-ignore');
-
-    // establish options
-    var options = {
-      selectors: "h1,h2,h3",
-      theme: "bootstrap3",
-      context: '.toc-content',
-      hashGenerator: function (text) {
-        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_');
-      },
-      ignoreSelector: ".toc-ignore",
-      scrollTo: 0
-    };
-    options.showAndHide = false;
-    options.smoothScroll = false;
-
-    // tocify
-    var toc = $("#TOC").tocify(options).data("toc-tocify");
-});
-</script>
 
 <!-- dynamically load mathjax for compatibility with self-contained -->
 <script>
