--- a/index.html
+++ b/index.html
@@ -289,6 +289,9 @@ $(document).ready(function () {
 <li>
   <a href="teaching.html">Teaching</a>
 </li>
+<li>
+  <a href="coding_tutorials.html">Coding Tutorials</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
